# truth-tunnel

./: .gitignore  Cargo.toml  LICENSE  README.md  ship-all.sh
config/: arweave.yaml  env.example  grpc.toml  ipfs.yaml  ledger.rocksdb.toml  ledger.sqlite.toml  nats.toml  slo.toml
config/agents/: guardians_org.yaml  swarm_roles.yaml
config/orchestrator/: phase_map.yaml  routing_rules.yaml
config/tenants/: tenant_default.yaml  tenant_example_acme.yaml
daemons/phase1-seed/: phase.plan.yaml
daemons/phase2-glyph-chain/: phase.plan.yaml
daemons/phase3-ledger/: phase.plan.yaml
daemons/phase4-digital-twin/: phase.plan.yaml
daemons/phase5-orchestrator/: phase.plan.yaml
daemons/phase6-ops/: phase.plan.yaml
daemons/phase7-harden/: phase.plan.yaml
docs/: Charter.md  Eng_Arch.md  SDD.md  UnfinishedManifesto.md
glyphs/: README.md
glyphs/examples/: anchor_glyph.example.json
glyphs/receipts/: receipts.jsonl
glyphs/schemas/: anchor_glyph.schema.json  daemon_status_glyph.schema.json  intent_glyph.schema.json  receipt_glyph.schema.json
scripts/: check-receipts.sh  deploy-manifest.sh  ledger-migrate.sh  nats-bootstrap.sh  weekly_red_loop_compaction.rs
src/crates/digital-twin-groot/: Cargo.toml  README.md
src/crates/drax-metrics/: Cargo.toml  README.md
src/crates/glyph-lib/: Cargo.toml  README.md
src/crates/groot-swarm/: Cargo.toml  README.md
src/crates/ledger-explorer/: Cargo.toml  README.md
src/crates/mantis-community/: Cargo.toml  README.md
src/crates/nebula-guard/: Cargo.toml  README.md
src/crates/portal-zero/: Cargo.toml  README.md
src/crates/rocket-engine/: Cargo.toml  README.md
src/crates/spv-api/: Cargo.toml  README.md
src/crates/star-lord-orchestrator/: Cargo.toml  README.md
tests/: test_digital_twin.rs  test_glyph_chain.rs  test_prufrock_sim.rs
