[package]
name = "drax-metrics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
nats = { workspace = true }
blake3 = { workspace = true }
pqcrypto-kyber = { workspace = true }
anyhow = { workspace = true }
prometheus = { version = "0.13", optional = true }
opentelemetry = { version = "0.25", optional = true }

[features]
default = ["metrics"]
metrics = ["prometheus", "opentelemetry"]