[package]
name = "glyph-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
pqcrypto-kyber = { workspace = true, optional = true }
merkle-tree = { version = "0.4", optional = true }
schemars = "0.8"
validator = "0.18"

[features]
default = ["crypto"]
crypto = ["pqcrypto-kyber", "merkle-tree"]