[package]
name = "ledger-explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
nats = { workspace = true }
blake3 = { workspace = true }
pqcrypto-kyber = { workspace = true }
rusqlite = { workspace = true, optional = true }
rocksdb = { workspace = true, optional = true }
sqlparser = "0.40"

[features]
default = ["storage"]
storage = ["rusqlite", "rocksdb"]